[package]
name = "rl_replay_decoder"
version = "0.1.0"
authors = ["Logan Saso <logansaso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0-beta2"

[[bin]]
name = "rl_replay"
path = "src/main.rs"

[lib]
name = "rl_replay_lib"
path = "src/lib.rs"
